@@ -138,32 +138,10 @@ impl<'a, P: Pixel> Renderer<'a, P> {
         self
     }
 
-    /// Sets the size of each module in pixels. Default is 8px.
-    #[deprecated(
-        since = "0.4.0",
-        note = "use `.module_dimensions(width, width)` instead"
-    )]
-    pub fn module_size(&mut self, width: u32) -> &mut Self {
-        self.module_dimensions(width, width)
-    }
-
     /// Sets the size of each module in pixels. Default is 8×8.
     pub fn module_dimensions(&mut self, width: u32, height: u32) -> &mut Self {
         self.module_size = (max(width, 1), max(height, 1));
         self
-    }
-
-    /// Sets the minimum total image width (and thus height) in pixels,
-    /// including the quiet zone if applicable. The renderer will try to find
-    /// the dimension as small as possible, such that each module in the QR code
-    /// has uniform size (no distortion).
-    ///
-    /// For instance, a version 1 QR code has 19 modules across including the
-    /// quiet zone. If we request an image of width ≥200px, we get that each
-    /// module's size should be 11px, so the actual image size will be 209px.
-    #[deprecated(since = "0.4.0", note = "use `.min_dimensions(width, width)` instead")]
-    pub fn min_width(&mut self, width: u32) -> &mut Self {
-        self.min_dimensions(width, width)
     }
 
     /// Sets the minimum total image size in pixels, including the quiet zone if
@@ -201,15 +179,6 @@ impl<'a, P: Pixel> Renderer<'a, P> {
         let unit_width = width / width_in_modules;
         let unit_height = height / height_in_modules;
         self.module_dimensions(unit_width, unit_height)
-    }
-
-    /// Renders the QR code into an image.
-    #[deprecated(
-        since = "0.4.0",
-        note = "renamed to `.build()` to de-emphasize the image connection"
-    )]
-    pub fn to_image(&self) -> P::Image {
-        self.build()
     }
 
     /// Renders the QR code into an image.
